--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
       <h1 class="title">Takumu Oomatsu</h1>
       <ul>
         <li><a href="https://takumuoomatsu-portfolio-site.herokuapp.com/about">About</a></li>
-        <li><a href="https://takumuoomatsu-portfolio-site.com/works">Works</a></li>
+        <li><a href="https://takumuoomatsu-portfolio-site.herokuapp.com/works">Works</a></li>
         <li><a href="https://forms.gle/jSaXRMgvwYUVzNyo7">Contact</a></li>
       </ul>
     </div>
