--- a/templates/works.html
+++ b/templates/works.html
@@ -50,7 +50,9 @@
       <div class="works-container">
 
         <div class="works-item">
-          <a><img src="../static/images/スクリーンショット 2021-09-15 16.46.46.png" href="https://takumuoomatsu-profile-site.herokuapp.com/"></a>
+          <a href="https://takumuoomatsu-profile-site.herokuapp.com/">
+            <img src="../static/images/スクリーンショット 2021-09-15 16.46.46.png" >
+          </a>
           <h2>MyProfile Site</h2>
           <p>
             HTML / CSS / JavaScript<br>
@@ -58,7 +60,9 @@
           </p>
         </div>
         <div class="works-item">
-          <a><img src="../static/images/スクリーンショット 2021-09-15 16.43.51.png" href="https://takumuoomatsu-portfolio-site.herokuapp.com/"></a>
+          <a href="https://takumuoomatsu-portfolio-site.herokuapp.com/">
+            <img src="../static/images/スクリーンショット 2021-09-15 16.43.51.png" >
+          </a>
           <h2>Portfolio Site</h2>
           <p>
             HTML / CSS / JavaScript<br>
